current_working/3_tier_app_kubernetes/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  labels:
    app: webapp
spec:
  replicas: 1 # Increase for HA/LB
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: tasky
        image: tklughardt/tasky:latest
        ports:
        - containerPort: 8080 # comes from Image Spec
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
  - protocol: TCP
    port: 8080 # best Practice: same as targetPort
    targetPort: 8080 # same as containerPort
    nodePort: 30080 # 30000 - 32767 -> Limited Port range by Kubernetes
