current_working/3_tier_app_kubernetes/minimal_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-minimal-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb
  tls:
  - hosts:
    - '*.amazonaws.com'
    secretName: webapp-tls
  rules:
  - host: '*.amazonaws.com'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-service
            port:
              number: 3000
