current_working/3_tier_app_kubernetes/network-mongo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mongodb-access
  namespace: tasky
spec:
  podSelector:
    matchLabels:
      app: webapp # Only this app may access mongo
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: my-app
    ports:
    - protocol: TCP
      port: 27017
